tried preventing extra large tables on mobile

--- a/formatting/foundation.css
+++ b/formatting/foundation.css
@@ -1013,6 +1013,9 @@ table.compact {
 	div {
 		font-size: 3rem;
 	}
+	table {
+		font-size: 3rem;
+	}
 	button {
 		font-size: 2.4rem;
 	}
